# field-service

./: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Jenkinsfile  README.md  oca_dependencies.txt  requirements.txt  test-requirements.txt
base_territory/: README.rst  __manifest__.py
fieldservice/: README.rst  __init__.py  __manifest__.py
fieldservice_account/: README.rst  __init__.py  __manifest__.py  hooks.py
fieldservice_account_analytic/: README.rst  __init__.py  __manifest__.py  init_hook.py
fieldservice_account_payment/: README.rst  __init__.py  __manifest__.py
fieldservice_activity/: README.rst  __init__.py  __manifest__.py
fieldservice_agreement/: README.rst  __manifest__.py
fieldservice_agreement_helpdesk_mgmt/: README.rst  __manifest__.py
fieldservice_agreement_serviceprofile/: README.rst  __manifest__.py
fieldservice_analytic_location_builder/: __init__.py  __manifest__.py
fieldservice_calendar/: README.rst  __manifest__.py
fieldservice_change_management/: README.rst  __init__.py  __manifest__.py
fieldservice_contract/: README.rst  __manifest__.py
fieldservice_crm/: README.rst  __manifest__.py
fieldservice_default_flow/: README.rst  __manifest__.py
fieldservice_delivery/: README.rst  __manifest__.py
fieldservice_distribution/: README.rst  __manifest__.py
fieldservice_equipment_agreement/: README.rst  __manifest__.py
fieldservice_equipment_brand_model/: README.rst  __manifest__.py
fieldservice_equipment_orders/: README.rst  __init__.py  __manifest__.py
fsm_base/: README.md  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+2050 files in other folders)
