[project]
name = "odoo-addons-oca-field-service"
version = "17.0.20240131.0"
dependencies = [
    "odoo-addon-base_territory>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_account>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_route>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
