[project]
name = "odoo-addons-oca-field-service"
version = "17.0.20240709.0"
dependencies = [
    "odoo-addon-base_territory>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_account>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_account_analytic>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_calendar>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_crm>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_isp_flow>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_recurring>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_route>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_sale>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_size>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_stage_validation>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_stock>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_stock_request>=17.0dev,<17.1dev",
    "odoo-addon-fieldservice_vehicle>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
